--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,3 +9,26 @@ body {
   height: 100%;
   width: 100%;
 }
+.loader-container {
+  height: 100vh;
+  width: 100vw;
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+}
+
+
+.loader {
+  width: 50px;              /* size */
+  height: 50px;             /* size */
+  border: 5px solid #3498db; /* border color */
+  border-top: 5px solid transparent;
+  border-radius: 50%;       /* make it circular */
+  animation: spin 1s linear infinite; /* rotation animation */
+}
+
+/* Keyframes for spinning */
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
