--- a/frontend/src/styles/create-food.css
+++ b/frontend/src/styles/create-food.css
@@ -2,7 +2,8 @@
 
 /* Container */
 .create-food-page {
-  min-height: 100dvh;
+  /* min-height: 100vh; */
+  /* overflow: hidden; */
   display: flex;
   align-items: flex-start;
   justify-content: center;
@@ -11,9 +12,13 @@
               radial-gradient(1200px 600px at 110% 110%, var(--color-surface-alt) 0%, transparent 45%),
               var(--color-bg);
 }
-
+.create-food-page::-webkit-scrollbar{
+  display: none;
+}
 .create-food-card {
   width: 100%;
+  margin-top: 1.5rem;
+  height: 100%;
   max-width: 720px; /* mobile-first but centered card */
   background: var(--color-surface);
   border: 1px solid var(--color-border);
